<resources>
    <string name="app_name">WGFinance</string>
    <string name="follow_the_instructions">Follow the instructions to create a new payment!</string>
    <string name="_00_00">00,00</string>
    <string name="purpose">Purpose</string>
    <string name="Click_on_members">Click on members to split the payment!</string>
    <string name="save_as_template">Save as template?</string>
    <string name="done">Done</string>
    <string name="editText_errorMessage">Error, please enter value!</string>
    <string name="tag_line">Better together</string>
    <string name="label_login">Login</string>
    <string name="hint_e_mail">E-Mail</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="title_for_layout">Title</string>
    <string name="subtitle_for_layout">Subtitle</string>
    <string name="text_for_layout">Text</string>
    <string name="add_new_shoppinglist">Add new Shoppinglist</string>
    <string name="payment_options">payment_options</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="btn_login">Anmelden</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_passwort">Passwort</string>
    <string name="txtview_registration">Registrieren</string>
    <string name="txtview_password">Passwort vergessen?</string>
    <string name="hint_name">Name</string>
    <string name="btn_createAccount">Konto erstellen</string>
    <string name="btn_resetPassword">Passwort zurücksetzen</string>
    <string name="hint_roommate">Anzahl Personen</string>
    <string name="hint_wgName">WG-Name</string>
    <string name="hint_Name">Dein Name</string>
    <string name="btn_createWG">WG erstellen</string>
    <string name="btn_joinWG">WG beitreten</string>
    <string name="btn_findWG">WG suchen</string>
    <string name="title_shoppinglist">Einkaufsliste</string>
    <string name="title_payments">Zahlungen</string>
    <string name="title_wg">WG</string>
    <string name="title_logout">Ausloggen</string>
    <string name="txtview_overview">Zahlungsübersicht</string>
    <string name="description_newpayment">newPayment</string>
    <string name="txtview_depts">Meine Schulden:</string>
    <string name="description_editBasket">Edit Basket</string>
    <string name="btn_savePayment">Zahlung speichern</string>
    <string name="txtview_totalAmount">Gesamtbetrag</string>
    <string name="hint_value">0.00</string>
    <string name="hint_message">Nachricht</string>
    <string name="hint_receiver">Du teilst deine Kosten mit</string>
    <string name="hint_chooseRoomate">Mitbewohner auswählen</string>
    <string name="note_options">Hi</string>
    <string name="btn_send">Senden</string>
    <string name="hint_recipient">Empfänger</string>
    <string name="txtview_recipient">Empfänger</string>
    <string name="txtview_subject">Betreff</string>
    <string name="txtview_message">Ihre Nachricht</string>
    <string name="hint_subject">Betreff</string>
    <string name="text_subject">Einladung in unsere WG!</string>
    <string name="hint_your_message">Ihre Nachricht</string>
    <string name="hint_amount">Betrag</string>
    <string name="hint_name_shoppinglist">Name der Einkaufsliste</string>
    <string name="hint_article">Ware/Artikel</string>
    <string name="hint_quantity">Anzahl</string>
    <string name="txtview_cost">cost</string>
    <string name="txtview_receiver">receiver</string>
    <string name="txtview_purpose">purpose</string>
    <string name="email">Email</string>
</resources>