<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Setup UI for SignUpScreen-->

    <ImageView
        android:id="@+id/headersignup"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/layout_header"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="@id/headersignup"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/headersignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:text="@string/tag_line"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/viewSupportersignup"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/headersignup"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_for_login"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupportersignup"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="54dp">


        <!--Registerinformation E-Mail and Password-->

        <Button
            android:id="@+id/btn_joinFlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="@drawable/roundedcorners"
            android:fontFamily="@font/latoregular"
            android:text="@string/btn_joinWG"
            android:textAllCaps="false"
            android:textColor="@color/TextFontColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


        <Button
            android:id="@+id/btn_findFlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorners"
            android:fontFamily="@font/latoregular"
            android:text="@string/btn_findWG"
            android:textAllCaps="false"
            android:textColor="@color/TextFontColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_joinFlat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flat_name"
            app:layout_constraintVertical_bias="0.037" />

        <EditText
            android:id="@+id/flat_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:drawableStart="@drawable/ic_baselina_home_work_24_black"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/latoregular"
            android:hint="@string/hint_wgName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/HintColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/found_flat_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/latoregular"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_joinFlat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_findFlat"
            app:layout_constraintVertical_bias="0.105"
            tools:ignore="SpeakableTextPresentCheck"
            app:drawableLeftCompat="@drawable/ic_baseline_location_city_24" />

        <TextView
            android:id="@+id/found_flat_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/latoregular"
            android:minHeight="48dp"
            android:textColorHint="@color/HintColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_joinFlat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.808"
            tools:ignore="SpeakableTextPresentCheck"
            app:drawableLeftCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/found_flat_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/latoregular"
            android:hint=""
            android:minHeight="48dp"
            android:textColorHint="@color/HintColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/found_flat_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/found_flat_address"
            app:layout_constraintVertical_bias="0.581"
            tools:ignore="SpeakableTextPresentCheck"
            app:drawableLeftCompat="@drawable/ic_baseline_group_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>